--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -94,9 +94,9 @@
             <version>20190722</version>
         </dependency>
         <dependency>
-            <groupId>com.cloudbees.jenkins.plugins</groupId>
-            <artifactId>cloudbees-credentials</artifactId>
-            <version>3.3</version>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>credentials</artifactId>
+            <version>2.6.1.1</version>
         </dependency>
     </dependencies>
     <repositories>
