--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>plain-credentials</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
